--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "902d20ed57c4ec55",
+        "id": "42a5b48593e50261",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "001.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "001.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "README.md",
+                "file": "001.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "README.md"
+                "file": "001.md"
               }
             }
           }
@@ -128,8 +128,12 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "902d20ed57c4ec55",
+  "active": "42a5b48593e50261",
   "lastOpenFiles": [
-    "001.md"
+    "Pasted image 20220903111449.png",
+    "Pasted image 20220903110708.png",
+    "001.md",
+    "Pasted image 20220903110913.png",
+    "README.md"
   ]
 }
